<resources>
    <string name="app_name">The Movie App</string>
    <string name="moviedb_api_sort_popularity">popular</string>
    <string name="moviedb_api_sort_rating">top_rated</string>
    <string name="menu_most_popular">Most Popular</string>
    <string name="menu_highest_rating">Highest Rating</string>
    <string name="menu_display_faves">Favorites</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_release_date">release_date</string>
    <string name="movie_poster_image">moviePosterImage</string>
    <string name="iv_movie_selected">Movie_selected</string>
    <string name="tv_movie_plot_overview">Overview:</string>
    <string name="tv_movie_details_genres">Genres:</string>
    <string name="tv_movie_details_popularity">Popularity:</string>
    <string name="tv_movie_details_vote_avg">Rating:</string>
    <string name="tv_movie_details_release_date">Release Date:</string>
    <string name="tv_movie_details_language">Language:</string>
    <string name="tv_movie_details_title">Title:</string>
    <string name="default_text">default_text</string>
    <string name="ib_fave_not_faved">Save to favorites</string>
    <string name="fave_removed">removed from favorites</string>
    <string name="fave_added">added to favorites</string>
    <string name="move_cover">Move Cover</string>
    <string name="desc_movie_poster_image">Movie Poster Image</string>
    <string name="no_faves_found">No Faves Found</string>
    <string name="error_fetching_genre_list">Error Fetching Genre List</string>
    <string name="tv_movie_trailers_heading">Trailers:</string>
    <string name="tv_trailers_none_available">No Trailers Available</string>
    <string name="iv_no_description_available">No Description Available</string>
    <string name="tv_review_author_hint">TheAuthorNameHere</string>
    <string name="iv_author_thumbnail_desc">Author Thumbnail</string>
    <string name="tv_reviews_not_available">No Reviews Available</string>
    <string name="tv_movie_reviews_heading">Reviews:</string>
    <string name="tv_cast_heading">Cast:</string>
    <string name="tv_cast_not_vailable">No Cast Available</string>
    <string name="manifest_movie_details_text">Movie Details</string>
    <string name="menu_settings">Preferences</string>
    <string name="pref_fave_default_sort">title</string>
    <string name="pref_fave_label">Favorite Sort Preference</string>
    <string name="pref_fave_key">fave_sort</string>
    <string name="state_movie_entity_list">movie_entity_list</string>
    <string name="state_sort_type">sort_type</string>
    <string name="state_layout_manager">layout_manager</string>
    <string name="state_activity_title">activity_title</string>
    <string name="extra_name_entity">MovieEntityExtra</string>
    <string name="mainifest_action_settings">Settings</string>
    <string name="menu_display_sort">Display Sort</string>
    <string name="state_movie_list_pos">movie_list_position</string>
</resources>
