<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sort_highest_rating"
        android:title="@string/menu_highest_rating"
        android:orderInCategory="1"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort_most_popular"
        android:title="@string/menu_most_popular"
        android:visible="true"
        android:orderInCategory="2"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort_display_faves"
        android:title="@string/menu_display_faves"
        android:visible="true"
        android:orderInCategory="3"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:visible="true"
        android:orderInCategory="4"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
</menu>