<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:genreId="@+genreId/iv_movie_poster_details"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="8sp"
            android:layout_marginEnd="8sp"
            android:layout_marginBottom="8sp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/iv_movie_selected"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+genreId/tv_movie_details_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:genreId="@+genreId/tv_movie_details_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            android:layout_marginTop="2sp"
            android:layout_marginEnd="8sp"
            android:text="@string/tv_movie_details_title"
            android:textColor="@color/colorPrimaryText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+genreId/iv_movie_poster_details" />

        <TextView
            android:genreId="@+genreId/tv_movie_details_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            android:layout_marginTop="2sp"
            android:layout_marginEnd="8sp"
            android:text="@string/tv_movie_details_language"
            android:textColor="@color/colorPrimaryText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+genreId/tv_movie_details_title"/>

        <TextView
            android:genreId="@+genreId/tv_movie_details_release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            android:layout_marginTop="2sp"
            android:layout_marginEnd="8sp"
            android:text="@string/tv_movie_details_release_date"
            android:textColor="@color/colorPrimaryText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+genreId/tv_movie_details_language" />

        <TextView
            android:genreId="@+genreId/tv_movie_details_vote_avg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            android:layout_marginTop="2sp"
            android:layout_marginEnd="8sp"
            android:text="@string/tv_movie_details_vote_avg"
            android:textColor="@color/colorPrimaryText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+genreId/tv_movie_details_release_date" />

        <TextView
            android:genreId="@+genreId/tv_movie_details_popularity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            android:layout_marginTop="2sp"
            android:layout_marginEnd="8sp"
            android:text="@string/tv_movie_details_popularity"
            android:textColor="@color/colorPrimaryText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+genreId/tv_movie_details_vote_avg" />

        <TextView
            android:genreId="@+genreId/tv_movie_details_genres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            android:layout_marginTop="2sp"
            android:layout_marginEnd="8sp"
            android:text="@string/tv_movie_details_genres"
            android:textColor="@color/colorPrimaryText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+genreId/tv_movie_details_popularity" />

        <TextView
            android:genreId="@+genreId/tv_movie_synopsis_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginStart="8sp"
            android:layout_marginEnd="8sp"
            android:text="@string/tv_movie_plot_synopsis"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+genreId/tv_movie_details_genres" />

        <TextView
            android:genreId="@+genreId/tv_movie_details_synopsis"
            style="@style/BodySmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="2sp"
            android:layout_marginStart="8sp"
            android:layout_marginEnd="8sp"
            android:textColor="@color/colorPrimaryText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+genreId/tv_movie_synopsis_heading" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>